added db struture
