# api-service/api/swagger/swagger.yaml
@@ -44,190 +44,6 @@ paths:
           schema:
             $ref: "#/definitions/DVFailureResponse"
     
-  /subcategories:
-    x-swagger-router-controller: residentController
-    get:
-      # security:
-      #   - api_key: [ ]
-      operationId: getSubcategories
-      parameters:
-        - name: subcat_id
-          type: string
-          in: query
-          required: true
-        - name: search_string
-          type: string
-          in: query
-          required: false
-        - name: page_size
-          type: integer
-          in: query
-          required: true
-        - name: page_number
-          type: integer
-          in: query
-          required: true
-      description: Get categories details
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/DVSuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/DVFailureResponse"
-
-  /resident:
-    x-swagger-router-controller: residentController
-    get:
-      # security:
-      #   - api_key: [ ]
-      operationId: getResident
-      parameters:
-        - name: id
-          type: string
-          in: query
-          required: true
-      description: Get resident details by id
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/DVSuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/DVFailureResponse"
-    post:
-      description: insert or update resident details
-      operationId: insertOrUpdateResident
-      parameters:
-        - name: resident
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/Resident"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/DVSuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/DVFailureResponse"
-    delete:
-      security:
-        - api_key: [ ]
-      operationId: deleteResidentById
-      description: delete resident by ID
-      parameters:
-        - name: id
-          type: string
-          in: query
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/DVSuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/DVFailureResponse"
-
-  /family:
-    x-swagger-router-controller: residentController
-    get:
-      # security:
-      #   - api_key: [ ]
-      operationId: getResidentFamilyList
-      parameters:
-        - name: unit_id
-          type: string
-          in: query
-          required: true
-        - name: search_string
-          type: string
-          in: query
-          required: false
-        - name: page_size
-          type: integer
-          in: query
-          required: true
-        - name: page_number
-          type: integer
-          in: query
-          required: true
-      description: Get resident family details
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/DVSuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/DVFailureResponse"
-    post:
-      description: insert or update resident family details
-      operationId: insertOrUpdateResidentFamily
-      parameters:
-        - name: residentFamily
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/ResidentFamily"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/DVSuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/DVFailureResponse"
-    delete:
-      security:
-        - api_key: [ ]
-      operationId: deleteResidentFamilyById
-      description: delete resident by ID
-      parameters:
-        - name: id
-          type: string
-          in: query
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/DVSuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/DVFailureResponse"
-  /familyDetails/{user_id}:
-    x-swagger-router-controller: residentController
-    get:
-      # security:
-      #   - api_key: [ ]
-      operationId: getResidentFamilyById
-      parameters:
-        - name: user_id
-          type: string
-          in: path
-          required: true
-      description: Get resident family details
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/DVSuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/DVFailureResponse"
 
   /swagger:
     x-swagger-pipe: swagger_raw
